[package]
name = "aiku-image-processing"
version = "0.1.0"
authors = ["danwritecode <dnelson4993@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.13"

console_error_panic_hook = { version = "0.1.1", optional = true }
image = "0.24.5"
usvg = "0.29.0"
resvg = "0.29.0"
tiny-skia = "0.8.3"
usvg-text-layout = "0.29.0"
liquid = "0.26.0"
serde = "1.0.152"
reqwest = "0.11.14"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
